--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my_class_room",
   "version": "1.0.0",
   "description": "",
-  "main": "chat-example/index.js",
+  "main": "chat/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
