--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ EMAIL=kea4semester@outlook.com
 PASSWORD=Birgitte1234
 PORT=3306
 HOST=database-2.c8e4q2gd2tmb.eu-central-1.rds.amazonaws.com
-DATABASE=nodelogin
+DATABASE=classroom_db
 DATAUSER=admin
 DATAPASS=adminadmin
