--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 EMAIL=kea4semester@outlook.com
 PASSWORD=Birgitte1234
 PORT=3306
-HOST=database-2.c8e4q2gd2tmb.eu-central-1.rds.amazonaws.com
+HOST=database-2.cfj2y1o70jeo.us-east-1.rds.amazonaws.com
 DATABASE=classroom_db
 DATAUSER=admin
 DATAPASS=adminadmin
