last nodejs project in my life

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-EMAIL=kea4semester@outlook.com
-PASSWORD=Birgitte1234
+EMAIL=
+PASSWORD=
 PORT=3306
 HOST=database-2.cfj2y1o70jeo.us-east-1.rds.amazonaws.com
 DATABASE=classroom_db
-DATAUSER=admin
-DATAPASS=adminadmin
+DATAUSER=
+DATAPASS=
